--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -2,3 +2,5 @@
 
 +font-face("roboto-example", "../fonts/RobotoRegular/RobotoRegular")
 +font-face("roboto-example", "../fonts/RobotoBold/RobotoBold", bold)
++font-face("OpenSansHebrew-Regular_0", "../fonts/OpenSansHebrew-Regular_0")
++font-face("OpenSansHebrew-Bold_0", "../fonts/OpenSansHebrew-Bold_0")
