--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -3,23 +3,313 @@
 /*==========  Desktop First  ==========*/
 
 /* Large Devices, Wide Screens */
+@media only screen and (max-width : 1540px)
+    .main-content, .main-content-popapp
+      height: 619px
+    .main-content
+      .nav-bar
+        .items
+          .item
+            font-size: 13px
+      .slider-sections
+        margin-top: 15px
+        .slides
+          .slide
+            .wrap-img
+              padding: 0 30px 0 0
+            .wrap-content
+              max-width: 660px
+              padding: 15px 20px
+            .wrap-text
+              height: 380px
+              h4
+                font-size: 22px
+                margin-bottom: 8px
+              h3
+                font-size: 27px
+                margin-bottom: 25px
+              p
+                font-size: 15px
+                margin: 0 0 15px
+              .footer-text
+                margin-top: 25px
+                p
+                  font-size: 14px
+
+    .slick-slider
+      .slick-next
+        left: 80%
+    .slick-slider
+      .slick-prev
+        right: 80%
+    .slick-slider
+      .slick-arrow
+        width: 28px
+        height: 47px
+    .slick-slider
+      .slick-slide
+        height: 400px
+
+    footer
+      .wrap-section
+        a
+          font-size: 18px
+
+    .main-content-popapp
+      .wrap-header-text
+        h1
+          margin-top: 20px
+          font-size: 42px
+        h3
+          font-size: 26px
+          margin-bottom: 20px
+        p
+          font-size: 16px
+        .wrap-button
+          max-width: 250px
+          margin: 20px auto 0
+          a
+            font-size: 15px
+            min-width: 140px
+      .items
+        margin: 30px -10px 0
+        max-width: 685px
+        .item
+          padding: 0 10px
+          .wrap-img
+            img
+              max-width: 100px
+              max-height: 85px
+          .wrap-text
+            .red-style
+              font-size: 13px
+
+/* Large Devices, Wide Screens */
 @media only screen and (max-width : 1200px)
-	/**/
+    .slick-slider
+      .slick-next
+        left: 85%
+    .slick-slider
+      .slick-prev
+        right: 85%
 
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
-	/**/
+    .slick-slider
+      .slick-next
+        left: 86%
+    .slick-slider
+      .slick-prev
+        right: 86%
+
+    .main-content
+      .nav-bar
+        .wrap-img
+          min-width: 100px
+      .slider-sections
+        .slides
+          .slide
+            .wrap-text
+              p
+                font-size: 14px
+              .footer-text
+                p
+                  font-size: 12px
+
+    footer
+      .wrap-section
+        a
+          font-size: 14px
+        .wrap-button
+          margin-right: 15px
+          a
+            min-height: 35px
+            min-width: 140px
+            font-size: 14px
+
 
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
-	/**/
+    .main-content, .main-content-popapp
+      //height: 590px
+      height: auto
+      min-height: 760px
+    .main-content
+      .nav-bar
+        flex-direction: column
+        .items
+          direction: ltr
+          border-radius: 25px
+          padding: 10px
+          height: 45px
+          width: 100%
+          .item
+            display: flex
+            justify-content: center
+            align-items: center
+            margin-bottom: 0
+            height: 100%
+            text-align: center
+            &:first-child
+              padding: 0 14px
+      .slider-sections
+        .slides
+          margin: 0 -66px
+          .slide
+            padding: 0 66px
+            .wrap-img
+              padding: 0 20px 0 0
+              width: 40%
+            .wrap-text
+              width: 60%
+              h4
+                font-size: 20px
+                margin-bottom: 5px
+              h3
+                font-size: 25px
+                margin-bottom: 20px
+              p
+                font-size: 13px
+                margin: 0 0 12px
+              .footer-text
+                margin-top: 20px
+
+    .slick-slider
+      .slick-next
+        left: 88%
+    .slick-slider
+      .slick-prev
+        right: 88%
+    .slick-slider
+      .slick-arrow
+        width: 20px
+        height: 34px
+
+    .main-content-popapp
+      .wrap-header-text
+        margin-top: 40px
+        h1
+          font-size: 38px
+          margin-top: 180px
+        h3
+          margin-bottom: 30px
+        p
+          font-size: 15px
+
+
+/* Extra Small Devices, Phones */
+@media only screen and (max-width : 600px)
+    .main-content
+      transition: .3s
+      //height: auto
+      //min-height: 590px
+      overflow: hidden
+      .nav-bar
+        flex-direction: column
+        .items
+          border-radius: 25px
+          padding: 10px
+          height: 45px
+          width: 100%
+          .item
+            display: flex
+            justify-content: center
+            align-items: center
+            margin-bottom: 0
+            height: 100%
+            text-align: center
+            &:first-child
+              padding: 0 14px
+      .slider-sections
+        .slides
+          margin: 0 -40px 40px
+          .slide
+            padding: 0 40px
+            .wrap-content
+              flex-wrap: wrap
+              .wrap-text
+                order: 2
+                width: 100%
+              .wrap-img
+                order: 1
+                width: 100%
+                margin-bottom: 20px
+                padding: 0
+
+    footer
+      .wrap-section
+        flex-direction: column
+        justify-content: space-around
+        align-items: center
+        .right-side
+          flex-direction: column
+          .wrap-text
+            margin-bottom: 10px
+        a
+          font-size: 13px
+        .wrap-button
+          margin-right: 0
+          a
+            min-width: 120px
+    .main-content-active
+      height: auto
+      min-height: 590px
+
+    .main-content-popapp, .main-content
+      height: auto
+      min-height: 920px
+    .main-content-popapp
+      .wrap-header-text
+        h1
+          margin-top: 180px
+      .items
+        .item
+          width: 33.333%
+
+    .slick-slider
+      .slick-slide
+        height: auto
+
+
+
 
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
-	/**/
+    .main-content
+      .slider-sections
+        .slides
+          margin: 0 -20px 40px
+          .slide
+            padding: 0 20px
+
+    footer
+      position: fixed
+      bottom: 0
+      left: 0
+      z-index: 9
+
+    .slick-slider
+      .slick-next
+        left: 94%
+    .slick-slider
+      .slick-prev
+        right: 94%
+    .slick-slider
+      .slick-slide
+        min-height: 720px
+
+    .main-content-popapp, .main-content
+      //height: auto
+      min-height: 500px
+      padding-bottom: 110px
+      //margin-bottom: 110px
+    .main-content-popapp
+      .items
+        .item
+          width: 50%
 
 
 /* Custom, iPhone Retina */
