--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -103,6 +103,59 @@ ul
 		align-items: center
 		&:hover
 			transform: scale(.9)
+.label-gofman
+	position: absolute
+	left: -35px
+	top: 450px
+	transform: rotate(-90deg)
+	z-index: 9
+	a
+		text-transform: uppercase
+		color: #361400
+		text-decoration: none
+		font-family: "OpenSansHebrew-Regular_0"
+		font-size: 10px
+		line-height: 1
+		position: relative
+		transition: .3s
+		&:after
+			content: ''
+			position: absolute
+			top: 4px
+			left: -8px
+			width: 6px
+			height: 6px
+			border-radius: 50%
+			background: rgb(238, 35, 117)
+			transition: .3s
+		&:hover
+			&:after
+				background: #361400
+
+.label-gofman-mobile
+	text-align: center
+	.label-gofman-mobile-link
+		text-transform: uppercase
+		color: white
+		text-decoration: none
+		font-family: "OpenSansHebrew-Regular_0"
+		font-size: 10px
+		line-height: 1
+		position: relative
+		transition: .3s
+		&:after
+			content: ''
+			position: absolute
+			top: 4px
+			left: -8px
+			width: 6px
+			height: 6px
+			border-radius: 50%
+			background: rgb(238, 35, 117)
+			transition: .3s
+		&:hover
+			&:after
+				background: white
 
 //============================================
 .main-content
@@ -186,7 +239,7 @@ ul
 					max-width: 925px
 					padding: 20px 30px
 				.wrap-text
-					//direction: rtl
+					direction: rtl
 					text-align: right
 					padding-left: 5px
 					overflow-y: auto
@@ -426,6 +479,7 @@ footer
 				background-color: rgb(255, 255, 255)
 				box-shadow: 0 0 20px 2px rgba(75, 120, 181, 0.2)
 				padding: 10px 0
+				min-height: 220px
 				text-decoration: none
 				transition: .3s
 				&:hover
